--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -4,6 +4,7 @@
   <li class="nav justify-content-center">
   	  <a class="nav-link active" routerLink="/usuario/menu" routerLinkActive="active">Usuario</a>
       <a class="nav-link active" routerLink="/trayecto" routerLinkActive="active">Trayecto</a>
+      <a class="nav-link active" routerLink="/alquiler/crear" routerLinkActive="active">Alquiler</a>
       <!-- Usar como pruebas, eliminar al terminar -->
       <a class="nav-link active" routerLink="/alquiler/crear" routerLinkActive="active">pruebas</a>
   </li>
