--- a/src/app/info-trayecto/edit-info-trayecto/edit-info-trayecto.component.html
+++ b/src/app/info-trayecto/edit-info-trayecto/edit-info-trayecto.component.html
@@ -49,7 +49,7 @@
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Hora Inicial</label >
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value={{info.}} id="horaInicial" [(ngModel)]="info.horaInicial" [ngModelOptions]="{standalone: true}" #horaInicial="ngModel" [ngClass]="{ 'is-invalid': f.submitted && horaInicial.invalid }" required>
+                                    <input type="text" class="form-control" value={{info.horaInicial}} id="horaInicial" [(ngModel)]="info.horaInicial" [ngModelOptions]="{standalone: true}" #horaInicial="ngModel" [ngClass]="{ 'is-invalid': f.submitted && horaInicial.invalid }" required>
                                     <div class="invalid-feedback">
                                         <div>Falta la Hora Inicial</div>
                                     </div>
