--- a/src/app/usuario/usuario-detail/usuario-detail.component.html
+++ b/src/app/usuario/usuario-detail/usuario-detail.component.html
@@ -1,3 +1,9 @@
+<div class="text-left">
+  	<button type="button" class="btn btn-primary" routerLink="/usuario/lista">Volver a la lista</button>
+</div>
+<div class="text-right">
+  <button type="button" class="btn btn-primary" [routerLink]="['/usuario/menu', { outlets: { 'content': 'info' } }]">Ir al usuario completo</button>
+</div>
 <div class="card" style="width: 18rem;">
   <div class="card-body">
     <h5 class="card-title">{{usuarioDetail.nombre}} {{usuarioDetail.apellido}}</h5>
