Mínimas correciones a info trayecto

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -8,7 +8,7 @@
   <button type="button" class="btn">InfoTC</button>
   <button type="button" class="btn" routerLink="/peaje/admin">Peajes</button>
   <button type="button" class="btn" routerLink="/seguro/admin">Seguros</button>
-  <button type="button" class="btn">Trayectos</button>
+  <button type="button" class="btn" routerLink="/trayecto/create">Trayectos</button>
   <button type="button" class="btn" routerLink="/usuario/lista">Usuarios</button>
   <button type="button" class="btn">Vehiculos</button>
 </div>
