--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -3,7 +3,8 @@
 <ul class="nav nav-pills">
   <li class="nav justify-content-center">
   	  <a class="nav-link active" routerLink="/usuario/menu" routerLinkActive="active">Usuario</a>
-      <a class="nav-link active" routerLink="/trayecto" routerLinkActive="active">Trayecto</a>
+  	  <a class="nav-link active" routerLink="/trayecto/list" routerLinkActive="active">Trayectos</a>
+      <a class="nav-link active" routerLink="/trayecto/create" routerLinkActive="active">Crear Trayecto</a>
       <!-- Usar como pruebas, eliminar al terminar -->
       <a class="nav-link active" routerLink="/alquiler/crear" routerLinkActive="active">pruebas</a>
   </li>
