--- a/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
+++ b/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
@@ -14,9 +14,9 @@
                     </div>
                 </div> 
                 <div class="form-group">
-                    <label for="fechaInicio"><b>Fecha de Inicio</b></label>
-                    <input type="text" name="fechaInicio" class="form-control" id="fechaInicio" [(ngModel)]="trayecto.fechaInicio"
-                        #apellido="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fechaInicio.invalid }"  required>
+                    <label for="fechaInicial"><b>Fecha de Inicio</b></label>
+                    <input type="text" name="fechaInicial" class="form-control" id="fechaInicial" [(ngModel)]="trayecto.fechaInicial"
+                        #apellido="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fechaInicial.invalid }"  required>
                     <div class="invalid-feedback">
                         <div>Falta la fecha de inicio</div>
                     </div>
