ultimos arreglos Alquiler y seguro

--- a/src/app/alquiler/editar-alquiler/editar-alquiler.component.html
+++ b/src/app/alquiler/editar-alquiler/editar-alquiler.component.html
@@ -4,7 +4,7 @@
                             <div class="form-group">
                                 <label for="alquilerNombre" class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" name="alquilerNombre" id="alquilerNombre" class="form-control" 
+                                    <input type="text" name="nombre" id="alquilerNombre" class="form-control" 
                                     value="Alquiler" [(ngModel)]="alquiler.name" #alquilerNombre="ngModel" 
                                     [ngClass]="{ 'is-invalid': f.submitted && alquilerNombre.invalid }" required>
                                     <div class="invalid-feedback">
