--- a/src/app/alquiler/editar-alquiler/editar-alquiler.component.html
+++ b/src/app/alquiler/editar-alquiler/editar-alquiler.component.html
@@ -2,11 +2,11 @@
                     <form name="alquiler" (ngSubmit)="f.form.valid && updatealquiler()" #f="ngForm" novalidate class="form-horizontal">
                         <fieldset class="fieldset">
                             <div class="form-group">
-                                <label for="alquilerNombre" class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
+                                <label for="nombre" class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" name="nombre" id="alquilerNombre" class="form-control" 
-                                    value="Alquiler" [(ngModel)]="alquiler.name" #alquilerNombre="ngModel" 
-                                    [ngClass]="{ 'is-invalid': f.submitted && alquilerNombre.invalid }" required>
+                                    <input type="text" name="nombre" id="nombre" class="form-control" 
+                                    value="Alquiler" [(ngModel)]="alquiler.nombre" #nombre="ngModel" 
+                                    [ngClass]="{ 'is-invalid': f.submitted && nombre.invalid }" required>
                                     <div class="invalid-feedback">
                                             <div>El nombre del alquiler es invalido</div>
                                         </div>
@@ -36,7 +36,7 @@
                         <div class="form-group">
                             <div class="btn-group" role="group" aria-label="Basic example">
   								<button type="button" class="btn btn-danger" (click)="cancelEdition()">Descartar cambios</button>
-  								<button type="button" class="btn btn-success" (click)="updatealquiler()">Aplicar cambios</button>
+  								<button type="button" class="btn btn-success">Aplicar cambios</button>
 							</div>
                         </div>
                     </form>
