Se agrega vehículo a admin y al modulo principal

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,11 +4,10 @@
   <button type="button" class="btn">Calificaciones</button>
   <button type="button" class="btn">Ciudades</button>
   <button type="button" class="btn">Notificaciones</button>
-  <button type="button" class="btn">Pagos</button>
-  <button type="button" class="btn">InfoTC</button>
+  <button type="button" class="btn" routerLink="/pago/list">Pagos</button>
   <button type="button" class="btn" routerLink="/peaje/admin">Peajes</button>
   <button type="button" class="btn" routerLink="/seguro/admin">Seguros</button>
   <button type="button" class="btn" routerLink="/trayecto/create">Trayectos</button>
   <button type="button" class="btn" routerLink="/usuario/lista">Usuarios</button>
-  <button type="button" class="btn">Vehiculos</button>
+  <button type="button" class="btn" routerLink="/vehiculo/list">Vehiculos</button>
 </div>
