--- a/src/app/peaje/editar-peaje/editar-peaje.component.html
+++ b/src/app/peaje/editar-peaje/editar-peaje.component.html
@@ -1,42 +1,70 @@
 <h2 class="title">Editar Peaje</h2>
-                    <form name="alquiler" (ngSubmit)="f.form.valid && updatePeaje()" #f="ngForm" novalidate class="form-horizontal">
+                    <form name="alquiler" (ngSubmit)="f.form.valid && updatealquiler()" #f="ngForm" novalidate class="form-horizontal">
                         <fieldset class="fieldset">
                             <div class="form-group">
-                                <label for="alquilerNombre" class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
+                                <label for="instrucciones">Digite en todos los campos la información que desea que presente el alquiler según el ID especificado</label>
+                                <label for="alquilerNombre" class="col-md-2 col-sm-3 col-xs-12 control-label">ID</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" name="nombre" id="nombre" class="form-control" 
-                                    value="Peaje" [(ngModel)]="peaje.name" #nombre="ngModel" 
-                                    [ngClass]="{ 'is-invalid': f.submitted && nombre.invalid }" required>
+                                    <input type="text" name="id" id="id" class="form-control" 
+                                    value="100" [(ngModel)]="peaje.id" #id="ngModel" 
+                                    [ngClass]="{ 'is-invalid': f.submitted && id.invalid }" required>
                                     <div class="invalid-feedback">
-                                            <div>El nombre del alquiler es invalido</div>
+                                            <div>El id del alquiler es invalido</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                    <label for="alquilerNombre" class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
+                                    <div class="col-md-10 col-sm-9 col-xs-12">
+                                        <input type="text" name="nombre" id="nombre" class="form-control" 
+                                        value="Peaje" [(ngModel)]="peaje.nombre" #id="ngModel" 
+                                        [ngClass]="{ 'is-invalid': f.submitted && nombre.invalid }" required>
+                                        <div class="invalid-feedback">
+                                                <div>El nombre del alquiler es invalido</div>
                                         </div>
-                                </div>
+                                    </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Costo</label>
-                                <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="100">
-                                </div>
+                                    <label for="alquilerNombre" class="col-md-2 col-sm-3 col-xs-12 control-label">Costo</label>
+                                    <div class="col-md-10 col-sm-9 col-xs-12">
+                                        <input type="text" name="costo" id="costo" class="form-control" 
+                                        value="Peaje" [(ngModel)]="peaje.costo" #id="ngModel" 
+                                        [ngClass]="{ 'is-invalid': f.submitted && costo.invalid }" required>
+                                        <div class="invalid-feedback">
+                                                <div>El costo del alquiler es invalido</div>
+                                        </div>
+                                    </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Latitud</label>
+                            <label for="alquilerNombre" class="col-md-2 col-sm-3 col-xs-12 control-label">Latitud</label>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="200">
+                                    <input type="text" name="latitud" id="latitud" Latitud="form-control" 
+                                    value="Peaje" [(ngModel)]="peaje.latitud" #id="ngModel" 
+                                    [ngClass]="{ 'is-invalid': f.submitted && latitud.invalid }" required>
+                                    <div class="invalid-feedback">
+                                        <div>La latitud del alquiler es invalido</div>
+                                    </div>
                                 </div>
                             </div>
+
                             <div class="form-group">
-                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Longitud</label>
-                                <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <input type="text" class="form-control" value="100">
-                                </div>
+                                    <label for="alquilerNombre" class="col-md-2 col-sm-3 col-xs-12 control-label">Longitud</label>
+                                        <div class="col-md-10 col-sm-9 col-xs-12">
+                                            <input type="text" name="longitud" id="longitud" class="form-control" 
+                                            value="Peaje" [(ngModel)]="peaje.longitud" #id="ngModel" 
+                                            [ngClass]="{ 'is-invalid': f.submitted && longitud.invalid }" required>
+                                            <div class="invalid-feedback">
+                                                    <div>El longitud del alquiler es invalido</div>
+                                            </div>
+                                        </div>
+                            </div>
+
                             
-                            
-                            </div>
                         </fieldset>
                         <div class="form-group">
                             <div class="btn-group" role="group" aria-label="Basic example">
-  								<button type="button" class="btn btn-danger" (click)="cancelEdition()">Descartar cambios</button>
-  								<button type="button" class="btn btn-success" (click)="updatePeaje()">Aplicar cambios</button>
+  								<button type="button" class="btn btn-danger" >Descartar cambios</button>
+  								<button type="button" class="btn btn-success" >Aplicar cambios</button>
 							</div>
                         </div>
                     </form>
