--- a/src/app/peaje/crear-peaje/crear-peaje.component.html
+++ b/src/app/peaje/crear-peaje/crear-peaje.component.html
@@ -4,7 +4,7 @@
             <br>
             <h2 class="text-center">Creando Peaje</h2>
             <br>
-            <form name="usuario" (ngSubmit)="f.form.valid && createUsuario()" #f="ngForm" novalidate>
+            <form name="usuario" (ngSubmit)="f.form.valid && createPeaje()" #f="ngForm" novalidate>
                 <div class="form-group">
                     <label for="nombre"><b>Nombre</b></label>
                     <input type="text" name="nombre" class="form-control" id="nombre" [(ngModel)]="peaje.nombre"
@@ -15,23 +15,32 @@
                 </div> 
                 <div class="form-group">
                     <label for="costo"><b>Costo</b></label>
-                    <input type="text" name="costo" class="form-control" id="costo">
+                    <input type="text" name="costo" class="form-control" id="costo"[(ngModel)]="peaje.costo"
+                    #costo="ngModel" [ngClass]="{ 'is-invalid': f.submitted && costo.invalid }" required>
+                    <div class="invalid-feedback">
+                        <div>Falta el costo</div>
                     </div>
-                
-                <div class="form-group">
-                    <label for="latitud"><b>Latitud</b></label>
-                    <input type="text" name="latitud" class="form-control" id="latitud">
-                    </div>
-                
+                </div>
                 <div class="form-group">
                     <label for="longitud"><b>Longitud</b></label>
-                    <input type="text" name="longitud" class="form-control" id="longitud">
+                    <input type="number" name="longitud" class="form-control" id="longitud"[(ngModel)]="peaje.longitud"
+                    #longitud="ngModel" [ngClass]="{ 'is-invalid': f.submitted && longitud.invalid }" required>
+                    <div class="invalid-feedback">
+                        <div>Falta la longitud</div>
                     </div>
-                
+                </div>
+                <div class="form-group">
+                    <label for="latitud"><b>Latitud</b></label>
+                    <input type="number" name="latitud" class="form-control" id="latitud"[(ngModel)]="peaje.latitud"
+                    #latitud="ngModel" [ngClass]="{ 'is-invalid': f.submitted && latitud.invalid }" required>
+                    <div class="invalid-feedback">
+                        <div>Falta el latitud</div>
+                    </div>
+                </div>
                 
                 <br>
                 <div class="row form-inline justify-content-center align-self-center">
-                    <button type="submit" class="btn btn-primary" (click)="createPeaje()" >Create</button>
+                    <button type="submit" class="btn btn-primary">Create</button>
                     <div class="divider"></div>
                     <button type="button" class="btn btn-danger" (click)="cancelEdition()">Cancel</button>
                 </div>
