--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -9,5 +9,5 @@
   <button type="button" class="btn" routerLink="/seguro/admin">Seguros</button>
   <button type="button" class="btn" routerLink="/trayecto/create">Trayectos</button>
   <button type="button" class="btn" routerLink="/usuario/lista">Usuarios</button>
-  <button type="button" class="btn" routerLink="/vehiculo/list">Vehiculos</button>
+  <button type="button" class="btn" routerLink="/vehiculo/create">Vehiculos</button>
 </div>
