--- a/src/app/vehiculo/vehiculo-create/vehiculo-create.component.html
+++ b/src/app/vehiculo/vehiculo-create/vehiculo-create.component.html
@@ -1,3 +1,42 @@
-<p>
-  vehiculo-create works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-12">
+          <br>
+          <h2 class="text-center">Creando Vehiculo</h2>
+          <br>
+          <form name="vehiculo" (ngSubmit)="f.form.valid && agregarVehiculoUsuario()" #f="ngForm" novalidate>
+              <div class="form-group">
+                  <label for="nombre"><b>Modelo</b></label>
+                  <input type="text" name="modelo" class="form-control" id="modelo" [(ngModel)]="vehiculo.modelo"
+                      #modelo="ngModel" [ngClass]= "{ 'is-invalid': f.submitted && modelo.invalid }" required>
+                  <div class="invalid-feedback">
+                      <div>Falta el modelo</div>
+                  </div>
+              </div> 
+              <div class="form-group">
+                  <label for="color"><b>Color</b></label>
+                  <input type="text" name="color" class="form-control" id="color"[(ngModel)]="vehiculo.color"
+                  #color="ngModel" [ngClass]="{ 'is-invalid': f.submitted && color.invalid }" required>
+                  <div class="invalid-feedback">
+                      <div>Falta el color</div>
+                  </div>
+              </div>
+              <div class="form-group">
+                  <label for="longitud"><b>Placa</b></label>
+                  <input type="text" name="longitud" class="form-control" id="placa"[(ngModel)]="vehiculo.placa"
+                  #placa="ngModel" [ngClass]="{ 'is-invalid': f.submitted && placa.invalid }" required>
+                  <div class="invalid-feedback">
+                      <div>Falta la placa</div>
+                  </div>
+                </div>
+              <br>
+              <div class="row form-inline justify-content-center align-self-center">
+                  <button type="submit" class="btn btn-primary">Create</button>
+                  <div class="divider"></div>
+                  <button type="button" class="btn btn-danger" (click)="cancelEdition()">Cancel</button>
+              </div>
+          </form>
+          <br>
+      </div>
+  </div>
+</div>
