Inicio por default. Admin agregado

--- a/src/app/inicio/inicio/inicio.component.html
+++ b/src/app/inicio/inicio/inicio.component.html
@@ -1,4 +1,5 @@
 <p>
   <button type="button" class="btn" routerLink="/usuario/login">Iniciar sesión</button>
   <button type="button" class="btn" routerLink="/usuario/create">Registrarse</button>
+  <button type="button" class="btn" routerLink="/admin">Administrador</button>
 </p>
