--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,18 @@
+<!-- Banner -->
+<div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand"  routerLink="">
+            <div class="form-inline">
+                <h2 class="mainTitle">Carpooling</h2>
+            </div>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="navbar-nav mr-auto mt-0">
+            </div>       
+        </div>
+    </nav>
 <router-outlet></router-outlet>
