Vehiculos del usuario en Front
Se agregan los vehiculos al front del usuario

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -100,6 +100,12 @@
           </div>
         </form>
    </div>
-    </div>
+   <div class="col-7">
+      Bienvenido {{usuario.nombre}}
+      <button class="button button5" routerLink="/usuario/menu">Usuario</button>
+
+   </div>
+</div>
+
 
 
