--- a/src/app/usuario/menu/menu.component.html
+++ b/src/app/usuario/menu/menu.component.html
@@ -15,7 +15,7 @@
                             <nav class="side-menu">
                                 <ul class="nav">
                                     <li class="active"><a [routerLink]= "['/usuario/menu', { outlets: { 'content': 'info' } }]"><span class="fa fa-user"></span> Información Principal</a></li>
-                                    <li><a href="#">Vehiculos</a></li>
+                                    <li><a [routerLink]= "['/usuario/menu', { outlets: { 'content': 'vehiculos' } }]">Vehiculos</a></li>
                                     <li><a href="#">Calificaciones</a></li>
                                     <li><a href="#">Notificaciones</a></li>
                                     <li><a href="#"> Buscar usuario</a></li>
