--- a/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
+++ b/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
@@ -6,14 +6,6 @@
             <br>
             <form name="Trayecto" (ngSubmit)="f.form.valid && createTrayecto()" #f="ngForm" novalidate>
                 <div class="form-group">
-                    <label for="id"><b>id</b></label>
-                    <input type="text" name="id" class="form-control" id="id" [(ngModel)]="trayecto.id"
-                        #nombre="ngModel" [ngClass]="{ 'is-invalid': f.submitted && id.invalid }" required>
-                    <div class="invalid-feedback">
-                        <div>Falta el id</div>
-                    </div>
-                </div> 
-                <div class="form-group">
                     <label for="fechaInicial"><b>Fecha de Inicio</b></label>
                     <input type="text" name="fechaInicial" class="form-control" id="fechaInicial" [(ngModel)]="trayecto.fechaInicial"
                         #apellido="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fechaInicial.invalid }"  required>
@@ -29,12 +21,29 @@
                         <div>Falta la fecha final</div>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label for="Estado"><b>Estado</b></label>
+                    <input type="text" name="estado" class="form-control" id="estado" [(ngModel)]="trayecto.estado"
+                        #documento="ngModel" [ngClass]="{ 'is-invalid': f.submitted && estado.invalid }" required>
+                    <div class="invalid-feedback">
+                        <div>Falta la Estado</div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="Id"><b>Id</b></label>
+                    <input type="text" name="id" class="form-control" id="id" [(ngModel)]="trayecto.id"
+                        #documento="ngModel" [ngClass]="{ 'is-invalid': f.submitted && id.invalid }" required>
+                    <div class="invalid-feedback">
+                        <div>Falta la Id</div>
+                    </div>
+                </div>
                 <br>
                 <div class="row form-inline justify-content-center align-self-center">
                     <button type="submit" class="btn btn-primary">Create</button>
                     <div class="divider"></div>
                     <button type="button" class="btn btn-danger" (click)="cancelCreation()">Cancel</button>
                 </div>
+                
             </form>
             <br>
         </div>
