--- a/src/app/trayecto/listar-trayecto/listar-trayecto.component.html
+++ b/src/app/trayecto/listar-trayecto/listar-trayecto.component.html
@@ -23,5 +23,5 @@
   </tbody>
 </table>
 <div class="text-right">
-  	<button type="button" class="btn btn-primary" routerLink="/admin">Volver</button>
+  	<button type="button" class="btn btn-primary" routerLink="/home">Volver</button>
 </div>
