Arreglos a listar trayecto

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -2,8 +2,8 @@
 <div class="row">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
-        <a href="#">Trayectos</a>
-        <a href="#">Alquiler</a>
+        <a routerLink="/home">Trayectos</a>
+        <a routerLink="/alquiler/list">Alquiler</a>
       </div>
       <div id="main">
           <span style="font-size:30px;cursor:pointer" (click)="openNav()">&#9776; Menu </span>
