Arreglo buscar trayectos

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -5,18 +5,13 @@
         <a routerLink="/home">Trayectos</a>
         <a routerLink="/alquiler/list">Alquiler</a>
       </div>
-      <div id="main">
+      <div id="main" class="col-sm-2">
           <span style="font-size:30px;cursor:pointer" (click)="openNav()">&#9776; Menu </span>
         </div>
 
 
-        <div class="col-7" *ngIf="usuario!=null">
-            Bienvenido {{usuario.nombre}}
-            <button class="button button5" routerLink="/usuario/menu">Usuario</button>
-        
-         </div>
-   
-  <div class="col-6 offset-3">
+       
+  <div class="col-sm-8">
       <br>
       <h2 class="text-center">Buscar Trayecto</h2>
       <br>
@@ -107,6 +102,11 @@
               <button type="submit" class="btn btn-primary" routerLink="/home">Buscar</button>
           </div>
         </form>
+   </div>
+   <div class="col-sm-2" *ngIf="usuario!=null">
+      Bienvenido {{usuario.nombre}}
+      <button class="button button5" routerLink="/usuario/menu">Usuario</button>
+  
    </div>
 
 </div>
