Otra pequeña corrección

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -3,7 +3,7 @@
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
         <a routerLink="/home">Trayectos</a>
-        <a routerLink="/alquiler/list">Alquiler</a>
+        <a routerLink="/pestaña-trayecto">Información Trayectos</a>
       </div>
       <div id="main" class="col-sm-2">
           <span style="font-size:30px;cursor:pointer" (click)="openNav()">&#9776; Menu </span>
