--- a/src/app/usuario/usuario-vehiculos/usuario-vehiculos.component.html
+++ b/src/app/usuario/usuario-vehiculos/usuario-vehiculos.component.html
@@ -6,17 +6,19 @@
 <thead>
   <tr>
     <th scope="col">#</th>
-    <th scope="col">Puntaje</th>
-    <th scope="col">Comentario</th>
-    <th scope="col">ID Trayecto</th>
+    <th scope="col">Modelo</th>
+    <th scope="col">Placa</th>
+    <th scope="col">Color</th>
+    <th scope="col">Alquiler</th>
   </tr>
 </thead>
 <tbody>
-  <tr *ngFor = "let calificacion of misCalificaciones">
-                  <td>{{calificacion.id}}</td>
-                  <td>{{calificacion.puntaje}}</td>
-                  <td>{{calificacion.comentario}}</td>
-                  <td>{{calificacion.trayecto}}</td>
+  <tr *ngFor = "let vehiculo of misVehiculos">
+                  <td>{{vehiculo.id}}</td>
+                  <td>{{vehiculo.modelo}}</td>
+                  <td>{{vehiculo.placa}}</td>
+                  <td>{{vehiculo.color}}</td>
+                  <td>{{vehiculo.alquiler}}</td>
               </tr>
 </tbody>
 </table>
