Buscar usuario esqueleto

--- a/src/app/usuario/menu/menu.component.html
+++ b/src/app/usuario/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col" >
+        <div class="col-3" >
             <div class="view-account">
                 <section class="module">
                     <div class="module-inner">
@@ -27,7 +27,7 @@
                 </section>
             </div>
         </div>
-        <div class="col" >
+        <div class="col-9" >
             <router-outlet name="content"></router-outlet>
         </div>
     </div>
