--- a/src/app/usuario/usuario-buscar-lista/usuario-buscar-lista.component.html
+++ b/src/app/usuario/usuario-buscar-lista/usuario-buscar-lista.component.html
@@ -38,5 +38,5 @@
 </table>
 <router-outlet name="detail"></router-outlet>
 <div class="text-right">
-  <button type="button" class="btn btn-primary" routerLink="/admin">Volver</button>
+  <button type="button" class="btn btn-primary" [routerLink]= "['/usuario/menu', { outlets: { 'content': 'buscarUsuarioLista' } }]">Volver</button>
 </div>
